Getting the css updated for fonts and added touched on app has
Decided to add some basic structure for the application template. Will
need to redo the header a bit later on.

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -6,6 +6,9 @@ Description: Styles that are used across the whole site
 // Basic CSS reset
 @import 'globals/reset.scss';
 
+// Fonts
+@import 'globals/fonts.scss';
+
 // Global Variables
 @import 'globals/variables.scss';
 
