Adding header and footer styles
Also had to update the header and footer to add classes for targeting
in css the way that I prefer.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,7 +7,7 @@ Notes: All styles should attempt to follow the BEM methodology for a degree of
 consistancy
 */
 
-@import 'globals.scss';
-@import 'layouts.scss';
-@import 'modules.scss';
-@import 'themes.scss';
+@import 'globals';
+@import 'layouts';
+@import 'modules';
+@import 'themes';
