--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="wrapper">
-	<header>
+	<header class="app-header">
 		<div class="container">
             <h1>Solar Trace</h1>
         </div>
@@ -9,7 +9,7 @@
 			{{outlet}}
 		</div>
 	</div>
-	<footer>
+	<footer class="app-footer">
 		<div class="container"></div>
 	</footer>
 </div>
