--- a/app/styles/globals/variables.scss
+++ b/app/styles/globals/variables.scss
@@ -3,3 +3,8 @@ Title: Variables
 Description: This is the primary source of truth for thing such as colors, margins 
 and other data that needs to be reused but slightly modified in the future.
 */
+
+/*========================================
+Grid
+========================================*/
+$grid-max-width: 1200px;
