Adding some basic information to the about page
Just a start, will be adding more as time goes on.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,20 @@
-{{outlet}}
+{{!
+Title: About Page
+Description: A basic about page that gives some brief information about 
+Solar Trace and it's goals. Eventually there might be enough information 
+to justify splitting these up into different pages. 
+Authors:
+    Sean Anteau
+}}
+<h1>About</h1>
+
+<h2>Goals</h2>
+<ol>
+    <li>Figure out how how much solar energy we could collect if we covered the major parking lots with solar panels.</li>
+    <li></li>
+</ol>
+
+<h2>How to Contribute</h2>
+<p>There are two ways to help us with this project.</p>
+<p>1) Start tracing all the roofs and parking lots of your local stores.</p>
+<p>2) Help us build this website by making contributions to our github repo.</p>
