--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,11 @@
 	<header class="app-header">
 		<div class="container">
             <h1>Solar Trace</h1>
+			<nav class="app-nav">
+				<ul>
+					<li>{{#link-to 'about'}}About{{/link-to}}</li>
+				</ul>
+			</nav>
         </div>
 	</header>
 	<div class="content">
