Adding an index route for homepage

--- a/app/styles/globals/variables.scss
+++ b/app/styles/globals/variables.scss
@@ -8,3 +8,13 @@ and other data that needs to be reused but slightly modified in the future.
 Grid
 ========================================*/
 $grid-max-width: 1200px;
+
+/*========================================
+Colors
+========================================*/
+$color-black: #000;
+
+/*========================================
+Font
+========================================*/
+$font-size-default: 16px;
