--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -14,3 +14,6 @@ Description: Styles that are used across the whole site
 
 // Grid
 @import 'globals/grid.scss';
+
+// Forms
+@import 'globals/forms.scss';
