--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="wrapper">
 	<header class="app-header">
 		<div class="container">
-            <h1>Solar Trace</h1>
+			<h1>{{#link-to 'index'}}Solar Trace{{/link-to}}</h1>
 			<nav class="app-nav">
 				<ul>
 					<li>{{#link-to 'about'}}About{{/link-to}}</li>
