updated trace controller to help the template show buttons once an address has been found. Starting the functions to create the new address and the traces applied to it.

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -17,3 +17,6 @@ Description: Styles that are used across the whole site
 
 // Forms
 @import 'globals/forms.scss';
+
+// Helpers
+@import 'globals/helpers.scss';
