--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,6 +4,7 @@
 			<h1>{{#link-to 'index'}}Solar Trace{{/link-to}}</h1>
 			<nav class="app-nav">
 				<ul>
+					<li>{{#link-to 'trace'}}Trace{{/link-to}}</li>
 					<li>{{#link-to 'about'}}About{{/link-to}}</li>
 				</ul>
 			</nav>
