--- a/app/templates/components/recent-traces.hbs
+++ b/app/templates/components/recent-traces.hbs
@@ -1,1 +1,7 @@
-{{yield}}
+<div class="recent-traces">
+    {{#each model as |trace|}}
+        <div class="recent-traces__trace">
+            {{company.name}}
+        </div>
+    {{/each}}
+</div>
