Fixed trace save issue
traces, address, and pins are now saved correctly.

--- a/app/templates/trace.hbs
+++ b/app/templates/trace.hbs
@@ -22,6 +22,7 @@ being traced by the user. }}
 <div class="{{unless locationSet 'hidden'}}">
     <a class="btn">Parking Lot</a>
     <a class="btn">Roof</a>
+    <a class="btn" {{action "saveTrace" on="click"}}>Save</a>
 </div>
 {{! 
 Leaflet Map Description: Map with google maps hybrid layer. User can click on the map to add points to create a polygon.
