Switching measurements to use Turf api

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -20,3 +20,6 @@ Description: Styles that are used across the whole site
 
 // Helpers
 @import 'globals/helpers.scss';
+
+// Buttons
+@import 'globals/buttons.scss';
