--- a/app/templates/trace.hbs
+++ b/app/templates/trace.hbs
@@ -1,6 +1,6 @@
 {{! Attribute Business Description: Drop down of available companies with address text fields below. Allows user to select
 a business then add it's address. }}
-<div>
+<div class="col col-3">
     <select name="company">
         {{#each model.companies as |company|}}
             <option value={{company.id}}>{{company.name}}</option>
@@ -19,20 +19,27 @@ a business then add it's address. }}
 </div>
 {{! Rooftop or Parking Lot Select Description: Two options that are toggled to determine if the parking lot or the roof is
 being traced by the user. }}
-<div class="{{unless locationSet 'hidden'}}">
-    <a class="btn">Parking Lot</a>
-    <a class="btn">Roof</a>
-    <a class="btn" {{action "saveTrace" on="click"}}>Save</a>
+<div class="col col-3">
+    <div class="{{unless locationSet 'hidden'}}">
+        <select name="type">
+            {{#each model.types as |type|}}
+                <option value={{type.id}}>{{type.title}}</option>
+            {{/each}}
+        </select>
+        <a class="btn" {{action "saveTrace" on="click"}}>Save</a>
+    </div>
 </div>
-{{! 
-Leaflet Map Description: Map with google maps hybrid layer. User can click on the map to add points to create a polygon.
-}} 
-{{#leaflet-map lat=lat lng=lng zoom=zoom onClick=(action 'addPoint')}} 
-    {{google-tile-layer type="HYBRID" opacity=0.9}} 
-    {{#each groundPoints as |r|}}
-        {{#marker-layer lat=r.lat lng=r.lng draggable=true onDragend=(action "updateLocation" r)}}
-        {{/marker-layer}}
-    {{/each}}
-    {{#polygon-layer locations=groundZone color="green"}}
-    {{/polygon-layer}}
-{{/leaflet-map}}
+<div class="col col-6">
+    {{! 
+    Leaflet Map Description: Map with google maps hybrid layer. User can click on the map to add points to create a polygon.
+    }} 
+    {{#leaflet-map lat=lat lng=lng zoom=zoom onClick=(action 'addPoint')}} 
+        {{google-tile-layer type="HYBRID" opacity=0.9}} 
+        {{#each groundPoints as |r|}}
+            {{#marker-layer lat=r.lat lng=r.lng draggable=true onDragend=(action "updateLocation" r)}}
+            {{/marker-layer}}
+        {{/each}}
+        {{#polygon-layer locations=groundZone color="green"}}
+        {{/polygon-layer}}
+    {{/leaflet-map}}
+</div>
