--- a/app/templates/trace.hbs
+++ b/app/templates/trace.hbs
@@ -6,16 +6,23 @@ a business then add it's address. }}
             <option value={{company.id}}>{{company.name}}</option>
         {{/each}}
     </select>
+    {{!--
     <div class="input-group">
         <label>Address</label> {{input name="address" value=address type="text"}}
     </div>
+    --}}
     <div class="input-group">
         <label>City</label> {{input name="city" value=city type="text"}}
     </div>
-    <div>
+    <div class="input-group">
         <label>State</label> {{input name="state" value=state type="text"}}
     </div>
     <div class="btn find-address" {{action "findAddress" on="click"}}>Go There</div>
+</div>
+<div class="col col-3">
+    {{#each foundAddresses as |address|}}
+        {{address.address1}}
+    {{/each}}
 </div>
 {{! Rooftop or Parking Lot Select Description: Two options that are toggled to determine if the parking lot or the roof is
 being traced by the user. }}
@@ -30,11 +37,11 @@ being traced by the user. }}
     </div>
 </div>
 <div class="col col-6">
-    {{! 
+    {{!
     Leaflet Map Description: Map with google maps hybrid layer. User can click on the map to add points to create a polygon.
-    }} 
-    {{#leaflet-map lat=lat lng=lng zoom=zoom onClick=(action 'addPoint')}} 
-        {{google-tile-layer type="HYBRID" opacity=0.9}} 
+    }}
+    {{#leaflet-map lat=lat lng=lng zoom=zoom onClick=(action 'addPoint')}}
+        {{google-tile-layer type="HYBRID" opacity=0.9}}
         {{#each groundPoints as |r|}}
             {{#marker-layer lat=r.lat lng=r.lng draggable=true onDragend=(action "updateLocation" r)}}
             {{/marker-layer}}
