--- a/app/templates/admin/index.hbs
+++ b/app/templates/admin/index.hbs
@@ -6,11 +6,11 @@
     <button class="btn" {{action "addBusinessForm"}}>Add Business</button>
     <div class="businesses">
         {{#each model.businesses as |business|}}
-            <div>
-                <div class="logo">
+            <div class="card-business">
+                <div class="card-business__logo">
                     <img src="{{business.logo}}" alt="{{business.name}}"/>
                 </div>
-                <h2>{{business.name}} <span>added: {{moment-format business.dateAdded 'MM/DD/YYYY' 'MM-DD-YYYY'}}</span></h2>
+                <h2>{{business.name}} <small>added: {{moment-format business.dateAdded 'MM/DD/YYYY' 'MM-DD-YYYY'}}</small></h2>
                 <p>{{business.description}}</p>
             </div>
         {{/each}}
