--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -1,5 +1,6 @@
 <div class="app-header">
     <div class="container">
-        <h1>Solar Trace</h1>
+        {{#link-to 'index'}}<h1>Solar Trace</h1>{{/link-to}}
+        {{#link-to 'trace' class="btn"}}Trace{{/link-to}}
     </div>
 </div>
