--- a/app/templates/trace/index.hbs
+++ b/app/templates/trace/index.hbs
@@ -1,1 +1,16 @@
 {{! select business }}
+<h2>Select a business</h2>
+<div>
+    {{#each model as |business|}}
+        {{#link-to 'trace.business' business}}
+            <div class="card-business">
+                <div class="card-business__logo">
+                    <img src="{{business.logo}}" alt="{{business.name}}"/>
+                </div>
+                <h2>{{business.name}} <small>added: {{moment-format business.dateAdded 'MM/DD/YYYY' 'MM-DD-YYYY'}}</small></h2>
+                <p>{{business.description}}</p>
+            </div>
+        {{/link-to}}
+    {{/each}}
+</div>
+{{! end business select}}
