Committing current state of application
Attempting to figure out the connecting between nested routes and
templates.

--- a/app/styles/smacss/modules.scss
+++ b/app/styles/smacss/modules.scss
@@ -1,3 +1,5 @@
 @import 'modules/cards';
 @import 'modules/components/app-header';
 @import 'modules/components/app-footer';
+
+@import 'modules/map';
