--- a/app/templates/trace.hbs
+++ b/app/templates/trace.hbs
@@ -2,7 +2,7 @@
 <h2>Select a business</h2>
 <div>
     {{#each model as |business|}}
-        {{#link-to 'trace.business' business}}
+        {{#link-to 'trace.business' business.id}}
             <div class="card-business">
                 <div class="card-business__logo">
                     <img src="{{business.logo}}" alt="{{business.name}}"/>
@@ -14,3 +14,4 @@
     {{/each}}
 </div>
 {{! end business select}}
+{{outlet}}
