--- a/app/templates/trace/business.hbs
+++ b/app/templates/trace/business.hbs
@@ -1,2 +1,3 @@
 {{model.name}}
-{{service-places business=model lat=lat lng=lng}}
+{{service-places business=model lat=lat lng=lng selectLocation=(action 'selectLocation')}}
+{{outlet}}
