--- a/app/templates/admin/index.hbs
+++ b/app/templates/admin/index.hbs
@@ -1,4 +1,5 @@
 <h2>Admin</h2>
+<h3>Businesses</h3>
 <div>
     {{#if showBusinessForm}}
         {{add-business}}
@@ -15,4 +16,22 @@
             </div>
         {{/each}}
     </div>
+</div>
+
+<div>
+    <h3>Trace Types</h3>
+    <form {{action 'addTraceType' on='submit'}}>
+        <div class='input-group'>
+            <label>Name:</label>
+            {{input value=name}}
+        </div>
+        <div class='input-group'>
+            <input type="submit" value="add trace type" class="btn"/>
+        </div>
+    </form>
+    <ul>
+        {{#each model.traceTypes as |type|}}
+            <li>{{type.name}}</li>
+        {{/each}}
+    </ul>
 </div>
