adding ember-paper
playing around with ember paper help with theming.

--- a/app/templates/address.hbs
+++ b/app/templates/address.hbs
@@ -3,13 +3,10 @@
 {{#leaflet-map lat=model.lat lng=model.lng zoom=18 onClick=(action 'addPin')}}
     {{google-mutant-layer type="hybrid"}}
     {{#each pins as |pin|}}
-        {{#marker-layer lat=pin.lat lng=pin.lng draggable=true onDragend=(action 'updatePinLocation' r)}}
-        {{/marker-layer}}
+        {{marker-layer lat=pin.lat lng=pin.lng draggable=true onDragend=(action 'updatePinLocation' r)}}
     {{/each}}
-    {{#polygon-layer locations=groundZone color="green"}}
-    {{/polygon-layer}}
+    {{polygon-layer locations=groundZone color="green"}}
     {{#each traces as |trace|}}
-        {{#polygon-layer locations=trace color="red"}}
-        {{/polygon-layer}}
+        {{polygon-layer locations=trace color="red"}}
     {{/each}}
 {{/leaflet-map}}
