--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -1,6 +1,8 @@
-<div class="app-header">
-    <div class="container">
-        {{#link-to 'index'}}<h1>Solar Trace</h1>{{/link-to}}
-        {{#link-to 'trace' class="btn"}}Trace{{/link-to}}
+<div class="app-header layout-row">
+    <div class="flex">
+        {{#link-to 'index'}}Solar Trace{{/link-to}}
+    </div>
+    <div class="flex">
+        {{#link-to 'trace' class="md-default-theme md-button md-primary md-raised"}}Trace{{/link-to}}
     </div>
 </div>
