didn't like ember paper
removing ember paper.

--- a/app/templates/components/app-header.hbs
+++ b/app/templates/components/app-header.hbs
@@ -1,8 +1,8 @@
-<div class="app-header layout-row">
-    <div class="flex">
+<div class="app-header grid-x">
+    <div class="small-6 cell">
         {{#link-to 'index'}}Solar Trace{{/link-to}}
     </div>
-    <div class="flex">
-        {{#link-to 'trace' class="md-default-theme md-button md-primary md-raised"}}Trace{{/link-to}}
+    <div class="small-6">
+        {{#link-to 'trace' class="button float-right"}}Trace{{/link-to}}
     </div>
 </div>
