--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,7 @@
-@import '../../node_modules/foundation-sites/assets/foundation';
+@import '../../node_modules/foundation-sites/scss/foundation';
+@include foundation-everything;
+
+@import 'molecules/card-business';
+
+@import 'organisms/app-header';
+@import 'organisms/map';
