--- a/app/templates/address.hbs
+++ b/app/templates/address.hbs
@@ -6,7 +6,9 @@
         {{marker-layer lat=pin.lat lng=pin.lng draggable=true onDragend=(action 'updatePinLocation' r)}}
     {{/each}}
     {{polygon-layer locations=groundZone color="green"}}
-    {{#each traces as |trace|}}
-        {{polygon-layer locations=trace color="red"}}
+    {{#each model.traces as |trace|}}
+        {{#each trace.pins as |pin|}}
+            {{marker-layer lat=pin.lat lng=pin.lng draggable=false}}
+        {{/each}}
     {{/each}}
 {{/leaflet-map}}
