--- a/app/templates/components/service-places.hbs
+++ b/app/templates/components/service-places.hbs
@@ -1,6 +1,5 @@
 <div id="map"></div>
-<div class="layout-row">
-{{#leaflet-map lat=lat lng=lng zoom=zoom class="flex"}}
+{{#leaflet-map lat=lat lng=lng zoom=zoom }}
     {{tile-layer url="http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png"}}
     {{#each mapPoints as |point|}}
     {{#marker-layer lng=point.lng lat=point.lat}}
@@ -12,4 +11,3 @@
     {{/marker-layer}}
     {{/each}}
 {{/leaflet-map}}
-</div>
