--- a/app/templates/components/map-trace.hbs
+++ b/app/templates/components/map-trace.hbs
@@ -1,1 +1,14 @@
-{{yield}}
+<div id="map"></div>
+{{#leaflet-map lat=address.lat lng=address.lng zoom=18 onClick=(action addPin)}}
+    {{google-mutant-layer type="hybrid"}}
+    {{#each pins as |pin|}}
+        {{#marker-layer lat=pin.lat lng=pin.lng draggable=true onDragend=(action updatePinLocation r)}}
+        {{/marker-layer}}
+    {{/each}}
+    {{#polygon-layer locations=groundZone color="green"}}
+    {{/polygon-layer}}
+    {{#each traces as |trace|}}
+        {{#polygon-layer locations=trace color="red"}}
+        {{/polygon-layer}}
+    {{/each}}
+{{/leaflet-map}}
