Updating the index and the business card component
feeding in more data to the business card to show addresses correctly and the number of traces

--- a/app/templates/components/business-card.hbs
+++ b/app/templates/components/business-card.hbs
@@ -2,7 +2,8 @@
     {{#card.title as |title|}}
         {{#title.text as |text|}}
             {{#text.headline}}{{business.name}}{{/text.headline}}
-                      {{#text.subhead}}Traces: {{business.traces.length}}{{/text.subhead}}
+                {{#text.subhead}}Addresses: {{business.addresses.length}}{{/text.subhead}}
+                {{#text.subhead}}Traces: {{numberOfTraces}}{{/text.subhead}}
         {{/title.text}}
         {{title.media size='lg' src=business.logo}}
     {{/card.title}}
