Creating components and tests - pre restructure
Commiting the current state of the code before I go ahead and start to restructure all of the code based on my notes and whiteboarding

--- a/app/templates/components/business-card.hbs
+++ b/app/templates/components/business-card.hbs
@@ -8,6 +8,7 @@
         {{title.media size='lg' src=business.logo}}
     {{/card.title}}
     {{#card.actions}}
+    {{log business.id}}
         {{paper-link 'Create Trace' 'business.trace' business}}
     {{/card.actions}}
 {{/paper-card}}
