--- a/app/templates/components/business-card.hbs
+++ b/app/templates/components/business-card.hbs
@@ -8,7 +8,6 @@
         {{title.media size='lg' src=business.logo}}
     {{/card.title}}
     {{#card.actions}}
-    {{log business.id}}
-        {{paper-link 'Create Trace' 'business.trace' business}}
+        {{paper-link 'Create Trace' 'trace' (query-params business=business.id)}}
     {{/card.actions}}
 {{/paper-card}}
