map and map api now work
Tests are still failing but i've fixed the map api issue since google updated their API to require a key just to use maps. revoked old key and generated new secure one stored in .env.

--- a/app/templates/trace.hbs
+++ b/app/templates/trace.hbs
@@ -1,1 +1,4 @@
 {{outlet}}
+{{model.address1}}
+<div class="btn" {{action 'saveTrace'}}>Save Trace</div>
+{{trace-map lat=lat lng=lng zoom=18 groundZone=groundZone pins=pins addPin=(action 'addPin')}}
