--- a/app/templates/components/trace-map.hbs
+++ b/app/templates/components/trace-map.hbs
@@ -14,9 +14,10 @@
         {{#each addresses as |address|}}
             {{#marker-layer lng=address.lng lat=address.lat}}
                 {{#popup-layer}}
+                    <h2>{{model.business.name}}</h2>
                     <h3>{{address.address1}}</h3>
                     {{address.city}}, {{address.state}} {{address.zipcode}}
-                    <div class="btn"> Choose Location</div>
+                    <div class="btn" {{action selectLocation address}}>Trace Address</div>
                 {{/popup-layer}}
             {{/marker-layer}}
         {{/each}}
