--- a/app/templates/trace.hbs
+++ b/app/templates/trace.hbs
@@ -2,6 +2,7 @@
 {{model.address1}}
 <div class="btn" {{action 'saveTrace'}}>Save Trace</div>
 {{trace-map 
+    model=model
     lat=lat 
     lng=lng 
     zoom=zoom
@@ -9,4 +10,5 @@
     pins=pins 
     showAddresses=showAddresses
     addresses=businessAddresses 
+    selectLocation=(action 'selectLocation')
     addPin=(action 'addPin')}}
